--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
+    "react-s3": "^1.3.1",
     "react-scripts": "4.0.3",
     "react-viewerjs": "^0.1.9",
     "reactstrap": "^9.0.0",
