--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.8.0",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.9.2",
     "@supabase/gotrue-js": "^1.18.0",
     "@supabase/supabase-js": "^1.24.0",
     "@testing-library/jest-dom": "^5.14.1",
